--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -17,7 +17,7 @@ rabbitmq:
 
 smtp:
   # Note you cannot scale if you use conteiner_name
-  container_name: qgis-org-za-smtp
+  container_name: haitidata-smtp
   image: catatnight/postfix
   hostname: postfix
   environment:
@@ -28,7 +28,7 @@ smtp:
 
 db:
   # Note you cannot scale if you use conteiner_name
-  container_name: qgis-org-za-db
+  container_name: haitidata-db
   image: kartoza/postgis:9.4-2.1
   volumes:
     - ./pg/postgres_data:/var/lib/postgresql
@@ -49,7 +49,7 @@ uwsgi-base:
     - DATABASE_HOST=db
     - RABBITMQ_HOST=rabbitmq
     - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
-    - VIRTUAL_HOST=qgis.org.za
+    - VIRTUAL_HOST=haitidata.com
     - VIRTUAL_PORT=8080
     # Set your locale - you need to ensure this is created in Dockerfile too...
     - LC_ALL=en_ZA.UTF-8
@@ -72,7 +72,7 @@ uwsgi-ephemeral:
 uwsgi:
   # Note you cannot scale if you use conteiner_name
   extends: uwsgi-base
-  container_name: qgis-org-za-uwsgi
+  container_name: haitidata-uwsgi
   links:
     - smtp:smtp
     - db:db
@@ -80,7 +80,7 @@ uwsgi:
 
 dbbackups:
   # Note you cannot scale if you use conteiner_name
-  container_name: qgis-org-za-db-backups
+  container_name: haitidata-db-backups
   image: kartoza/pg-backup:9.4
   hostname: pg-backups
   volumes:
@@ -90,7 +90,7 @@ dbbackups:
   environment:
     # take care to let the project name below match that
     # declared in the top of the makefile
-    - DUMPPREFIX=PG_qgis-org-za
+    - DUMPPREFIX=PG_haiti
     # These are all defaults anyway, but setting explicitly in
     # case we ever want to ever use different credentials
     - PGUSER=docker
@@ -103,7 +103,7 @@ dbbackups:
 # This is normally the main entry point for a production server
 web:
   # Note you cannot scale if you use conteiner_name
-  container_name: qgis-org-za-web
+  container_name: haitidata-web
   image: nginx
   hostname: nginx
   volumes:
@@ -125,10 +125,10 @@ web:
 # from produ environment if wanted
 devweb:
   # Note you cannot scale if you use conteiner_name
-  container_name: qgis-org-za-dev-web
+  container_name: haitidata-dev-web
   build: docker
   dockerfile: Dockerfile-dev
-  hostname: qgis-org-za-dev-web
+  hostname: haitidata-dev-web
   environment:
     - DATABASE_NAME=gis
     - DATABASE_USERNAME=docker
@@ -137,7 +137,7 @@ devweb:
     - RABBITMQ_HOST=rabbitmq
     - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
     - PYTHONPATH=/home/web/django_project
-    - VIRTUAL_HOST=qgis.org.za
+    - VIRTUAL_HOST=haitidata.com
     - VIRTUAL_PORT=8080
   volumes:
     - ../django_project:/home/web/django_project
@@ -167,7 +167,7 @@ worker:
      - DATABASE_QGIS_HOST=db_gis
      - RABBITMQ_HOST=rabbitmq
      - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
-     - VIRTUAL_HOST=qgis.org.za
+     - VIRTUAL_HOST=haitidata.com
      - VIRTUAL_PORT=8080
      - C_FORCE_ROOT=true
    volumes:
