--- a/deployment/docker/REQUIREMENTS.txt
+++ b/deployment/docker/REQUIREMENTS.txt
@@ -22,7 +22,6 @@ requests==2.0.0
 cartridge==0.12.0
 
 
-#symposion
 django-appconf==1.0.1
 django-model-utils==2.3.1
 django-reversion==1.9.3
@@ -37,3 +36,12 @@ pytz==2015.6
 pyyaml==3.11
 ruamel.yaml==0.13.14
 bleach==2.0.0
+
+
+#geonode
+django-geonode-client
+git+https://github.com/GeoNode/django-osgeo-importer.git
+django-jsonfield
+
+python-dateutil
+gdal
