--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -16,13 +16,17 @@ RUN apt-get update -y
 # Set the locale - change to your preferred locale ... We use South African english
 # We do this as cartridge (ecommerce platform for mezzanine) relies on
 # the locale to set the correct number of decimal places for the MoneyField
+RUN echo "deb http://ftp.debian.org/debian jessie main" >> /etc/apt/sources.list.d/gdal.list
 RUN apt-get update
 RUN apt-get install locales && \
     echo "en_ZA.UTF-8 UTF-8" >> /etc/locale.gen && \
     locale-gen en_ZA.UTF-8
+RUN apt-get install libgdal-dev -y
 ENV LANG en_ZA.UTF-8
 ENV LANGUAGE en_ZA:en
 ENV LC_ALL en_ZA.UTF-8
+ENV CPLUS_INCLUDE_PATH /usr/include/gdal
+ENV C_INCLUDE_PATH /usr/include/gdal
 
 ADD REQUIREMENTS.txt /REQUIREMENTS.txt
 RUN pip install -r /REQUIREMENTS.txt
