--- a/deployment/docker/Dockerfile-dev
+++ b/deployment/docker/Dockerfile-dev
@@ -1,6 +1,6 @@
 #--------- Generic stuff all our Dockerfiles should start with so we get caching ------------
 # Note this base image is based on debian
-FROM qgisorgza_uwsgi
+FROM haitidata_uwsgi
 MAINTAINER Muhammad Anis<anis@kartoza.com>
 
 # Use local cached debs from host (saves your bandwidth!)
