fix geonode static is not found in devweb

--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,7 @@ deployment/pg
 deployment/static
 deployment/media
 deployment/docker/71-apt-cacher-ng
+django_project/geonode
 django_project/celerybeat-schedule
 # local media
 django_project/media
