--- a/deployment/sites-enabled/default.conf
+++ b/deployment/sites-enabled/default.conf
@@ -3,6 +3,11 @@
 upstream uwsgi {
     server uwsgi:8080;
 }
+
+upstream geoserver {
+    server geoserver:8080;
+}
+
 server {
     # OTF gzip compression
     gzip on;
@@ -33,6 +38,10 @@ server {
         # your Django project's static files - amend as required
         alias /home/web/static;
         expires 21d; # cache for 21 days
+    }
+
+    location /api/geoserver/ {
+        proxy_pass http://geoserver/geoserver/;
     }
     # Finally, send all non-media requests to the Django server.
     location / {
