--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -54,6 +54,7 @@ uwsgi-base:
     - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
     - VIRTUAL_HOST=haitidata.com
     - VIRTUAL_PORT=8080
+    - GEOSERVER_PUBLIC_LOCATION=http://0.0.0.0:33300/api/geoserver/
     # Set your locale - you need to ensure this is created in Dockerfile too...
     - LC_ALL=en_ZA.UTF-8
   volumes:
@@ -144,6 +145,7 @@ devweb:
     - PYTHONPATH=/home/web/django_project
     - VIRTUAL_HOST=haitidata.com
     - VIRTUAL_PORT=8080
+    - GEOSERVER_PUBLIC_LOCATION=http://0.0.0.0:33303/api/geoserver/
   volumes:
     - ../django_project:/home/web/django_project
     - ./static:/home/web/static
