--- a/deployment/docker/Dockerfile-cloud
+++ b/deployment/docker/Dockerfile-cloud
@@ -60,6 +60,9 @@ WORKDIR /home/web
 # Download repository
 RUN git clone https://github.com/euclidian/haitidata
 
+RUN make migrate
+RUN make collectstatic
+
 WORKDIR /home/web/django_project
 
 CMD ["uwsgi", "--env", "LC_ALL=en_ZA.UTF-8", "--ini", "/uwsgi.conf"]
