--- a/deployment/playbook/haiti-ansible.yaml
+++ b/deployment/playbook/haiti-ansible.yaml
@@ -1,19 +1,18 @@
 ---
-- hosts: haitidata
+- hosts: haitidata_swarm
   vars:
     http_port: 80
     max_clients: 200
-  remote_user: root
   tasks:
   - name: pull haiti source code from github
     git:
       repo: https://github.com/euclidian/haitidata.git
-      dest: /home/web
+      dest: /tmp/web_haiti
   - name: run migrate
     make:
-      chdir: /home/web/haitidata/deployment
+      chdir: /tmp/web_haiti/deployment
       target: migrate
   - name: run collect static
     make:
-      chdir: /home/web/haitidata/deployment
+      chdir: /tmp/web_haiti/deployment
       target: collectstatic
