--- a/deployment/docker/REQUIREMENTS.txt
+++ b/deployment/docker/REQUIREMENTS.txt
@@ -1,42 +1,9 @@
-celery==3.1
-Django==1.10
-psycopg2
-django-compressor
-icalendar==3.0.1b2
-geopy==0.95.1
-filebrowser-safe==0.4.5
-# https://github.com/getsentry/raven-python/issues/337
-raven==5.8.1
-django-sentry==1.13.5
-requests==2.13.0
-
-#cartridge requirement
-cartridge==0.12.0
-
-
-django-appconf==1.0.1
-django-model-utils==2.3.1
-django-reversion==1.9.3
-django-sitetree==1.5.1
-django-taggit==0.21.5
-django-timezone-field==1.3
-django-user-accounts==1.2.0
-easy-thumbnails==2.2
-html5lib==0.999999999
-markdown==2.6.2
-pytz==2015.6
-pyyaml==3.11
-ruamel.yaml==0.13.14
-bleach==2.0.0
-
-
-#geonode
-django-geonode-client
 git+https://github.com/GeoNode/django-osgeo-importer.git
-django-jsonfield
 
-
-python-dateutil
 gdal==1.10.0
-git+https://github.com/meomancer/GeoNode-1.git
-django-tastypie
+geonode==2.7
+django-compressor
+django-geonode-client
+django-user-accounts==2.0.2
+django-tastypie==0.13.0
+OWSLib==0.14
