--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -11,7 +11,7 @@ DATABASE_GEONODE_NAME := geonode_data
 fresh-web: build permissions web
 
 # Use this for fresh build (it will restore with empty stable database)
-fresh-deploy: fresh-web
+fresh-deploy: fresh-web create-workspace
 	@docker exec -t -i $(PROJECT_ID)-db su - postgres -c "dropdb --if-exists $(DATABASE_NAME)"
 	@docker exec -t -i $(PROJECT_ID)-db su - postgres -c "dropdb --if-exists $(DATABASE_GEONODE_NAME)"
 	@docker exec -t -i $(PROJECT_ID)-db su - postgres -c "createdb -O docker -T template_postgis $(DATABASE_NAME)"
@@ -21,7 +21,7 @@ fresh-deploy: fresh-web
 	# restore fixtures
 	@docker-compose -p $(PROJECT_ID) run uwsgi-ephemeral /bin/bash -c "\
 	python manage.py loaddata /home/web/django_project/base/fixtures/initial_data.json &&\
-	python manage.py loaddata /home/web/django_project/base/fixtures/regions.json"
+	python manage.py loaddata /home/web/django_project/base/fixtures/regions.json"\
 
 
 default: web
