--- a/deployment/production/docker/Makefile
+++ b/deployment/production/docker/Makefile
@@ -9,4 +9,7 @@ build-django:
 build-db:
 	@cd db && ./build.sh
 
+build-geoserver:
+	@cd geoserver && ./build.sh
+
 build-all: build-db build-nginx build-django
