--- a/deployment/production/docker/nginx/sites-enabled/default.conf
+++ b/deployment/production/docker/nginx/sites-enabled/default.conf
@@ -1,7 +1,7 @@
 # Define connection details for connecting to django running in
 # a docker container.
 upstream uwsgi {
-    server uwsgi:8080;
+    server django:8080;
 }
 
 upstream geoserver {
