--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
       - VIRTUAL_HOST=haitidata.com
       - VIRTUAL_PORT=8080
+      - PROXY_ALLOWED_HOSTS=0.0.0.0
 
       # Ensure to change these based on server domain
       - SITEURL=http://0.0.0.0:33300/  # change this to ip or domain location
